// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelText matches noError snapshot: no error mount 1`] = `
.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(LabelText)>
  <LabelText
    className="glamor-0"
  >
    <Styled(span)
      className="glamor-0"
    >
      <span
        className="glamor-0 glamor-1"
      >
        example
      </span>
    </Styled(span)>
  </LabelText>
</glamorous(LabelText)>
`;

exports[`LabelText matches wrapper snapshot: wrapper mount 1`] = `
.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  font-weight: 700;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(LabelText)
  error="example"
>
  <LabelText
    className="glamor-0"
    error="example"
  >
    <Styled(span)
      className="glamor-0"
      error="example"
    >
      <span
        className="glamor-0 glamor-1"
      >
        example
      </span>
    </Styled(span)>
  </LabelText>
</glamorous(LabelText)>
`;
